--- a/DisplayDemo/MainWindow.xaml
+++ b/DisplayDemo/MainWindow.xaml
@@ -26,9 +26,11 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <Image Grid.Row="0" Margin="20 40 40 20" />
+            <Image x:Name="one" Grid.Row="0" Margin="20 40 40 20" MaxWidth="450" Stretch="Uniform" />
 
-            <Image Grid.Column="1" Margin="20 20 40 40" />
+            <Image x:Name="two" Grid.Row="1" Margin="20 20 40 40" MaxWidth="450" Stretch="Uniform" />
+            
+            
 
         </Grid>
     </Grid>
